<resources>
    <string name="app_name">10119227UTS</string>

    <string name="splash">Gonn </string>
    <string name="wt1">Hello</string>
    <string name="des1">Welcome to Gonn</string>
    <string name="buttonwt">GET STARTED</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nama">Naufal Hafizh</string>
    <string name="NIM">10119227</string>
    <string name="profile">Profile</string>

    <string name="nama_desc">My name is Naufal Hafizh, I was born in Semarang, 02 August 2001. I am an informatics engineering student at UNIKOM.</string>
    <string name="title_activity_bottom_about">BottomAbout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Hobby">Playing games and travelling</string>
    <string name="menu_daily">Daily Activity</string>



    <string name="title_activity">Daily Activity</string>
    <string name="title_friends">My Friends</string>
</resources>
