<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.naufalhafizh.a10119227uts.ui.home.FragmentHome"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily"
        android:name="com.naufalhafizh.a10119227uts.ui.daily.FragmentDaily"
        android:label="@string/menu_daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.naufalhafizh.a10119227uts.ui.gallery.FragmentDaily"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.naufalhafizh.a10119227uts.ui.favorite.FragmentFavorite"
        android:label="Favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.naufalhafizh.a10119227uts.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

</navigation>